Update admin CSS to widen pop-up picker ot fit 4 columns.

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -45,6 +45,10 @@
 	width: 100%;
 }
 
+.bfa-iconpicker .iconpicker-popover.popover {
+	width: 253px;
+}
+
 .bfa-iconpicker .iconpicker-component i {
 	display: none;
 }
