Update and accommodate fontawesome-iconpicker

--- a/lib/fontawesome-iconpicker/src/less/iconpicker.less
+++ b/lib/fontawesome-iconpicker/src/less/iconpicker.less
@@ -2,10 +2,9 @@
  * Font Awesome Icon Picker
  * https://farbelous.github.io/fontawesome-iconpicker/
  *
- * Originally written by (c) 2016 Javi Aguilar
- * Licensed under the MIT License
- * https://github.com/farbelous/fontawesome-iconpicker/blob/master/LICENSE
- *
+ * @author Javi Aguilar, itsjavi.com
+ * @license MIT License
+ * @see https://github.com/farbelous/fontawesome-iconpicker/blob/master/LICENSE
  */
 @import 'variables.less';
 @import 'popovers.less';
