Resolve iconpicker issues and refactor code

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -12,24 +12,17 @@
  * TinyMCE Button & Popup
  */
 
+.bfa-iconpicker {
+    display: inline-block;
+}
+
 .bfa-iconpicker .iconpicker-popover {
-	position: absolute;
-	top: 100%;
-	left: 0;
 	z-index: 1000;
-	display: none;
-	float: left;
-	min-width: 160px;
-	padding: 5px 0;
-	list-style: none;
-	font-size: 14px;
 	background-color: #fff;
 	border: 1px solid #ccc;
-	border: 1px solid rgba(0,0,0,.15);
 	border-radius: 4px;
 	-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
-	background-clip: padding-box;
 }
 
 .bfa-iconpicker .iconpicker-popover .arrow {
@@ -48,10 +41,6 @@
 
 .bfa-iconpicker input[type="search"] {
 	width: 100%;
-}
-
-.bfa-iconpicker .iconpicker-popover.popover {
-	width: 253px;
 }
 
 .bfa-iconpicker .iconpicker-component i {
